fix for mobile overflow

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -80,10 +80,11 @@ select {
 body {
   background-color: var(--bg-main-color);
   font-size: 16px;
+  height: 100%;
+  width: 100%;
   color: var(--body-color);
   font-family: Arial, Helvetica, sans-serif;
   min-height: 100vh;
-  overflow-x: hidden;
 }
 
 h1,h2,h3,h4,h5,h6{
